maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:18: error: type mismatch;
 found   : (Int, Int)
 required: List[Int]
        return (x,y);
               ^ShortestPathMaze:15: error: type mismatch;
 found   : Unit
 required: List[Int]
  for(x <- 0 until X)
        ^ShortestPathMaze:28: error: type mismatch;
 found   : (Int, Int)
 required: List[Int]
    marquerSol((x,y-1), numero+1);
               ^ShortestPathMaze:30: error: type mismatch;
 found   : (Int, Int)
 required: List[Int]
    marquerSol((x,y+1), numero+1);
               ^ShortestPathMaze:34: error: type mismatch;
 found   : (Int, Int)
 required: List[Int]
    marquerSol((x-1,y), numero+1);
               ^ShortestPathMaze:36: error: type mismatch;
 found   : (Int, Int)
 required: List[Int]
    marquerSol((x+1,y), numero+1);
               ^